✨ POLISHED & PERSONAL: Fixed glitchy movements and added innovative UI
- Fixed glitchy hover movements with smoother transitions
- Improved time warp effect - now elegant and smooth
- Added personal status indicator that changes every 3 seconds
- Added floating code snippets showing coding personality
- Added cursor trail effect that follows mouse movement
- Reduced animation frequency for better performance
- Added cubic-bezier easing for natural movement
- More polished and professional feel while maintaining insane effects

--- a/index.html
+++ b/index.html
@@ -59,6 +59,28 @@
       </div>
     </div>
 
+    <!-- Personal Status Indicator - Shows my current mood/status -->
+    <!-- This is a fun little touch that shows my personality -->
+    <div class="personal-status">
+      <span class="status-emoji">🚀</span>
+      <span class="status-text">Building the future</span>
+    </div>
+
+    <!-- Floating Code Snippets - Shows my coding personality -->
+    <!-- These are snippets of code that float around, showing what I work with -->
+    <div class="floating-code">const innovation = true;</div>
+    <div class="floating-code">if (creativity) { build(); }</div>
+    <div class="floating-code">while (learning) { grow(); }</div>
+
+    <!-- Innovation Indicator - Shows my creative process -->
+    <!-- This shows how my brain is constantly working on new ideas -->
+    <div class="innovation-indicator">
+      <div class="innovation-title">Creative Process</div>
+      <div class="innovation-progress">
+        <div class="innovation-bar"></div>
+      </div>
+    </div>
+
     <!-- Custom Cursor Follower - adds a modern, interactive feel -->
     <!-- This creates a smooth following cursor effect that's popular in modern web design -->
     <div class="cursor-follower"></div>
@@ -106,35 +128,44 @@
         </div>
       </div>
     </nav>
-    <!-- Hero Section -->
+    <!-- Hero Section - The main attraction! -->
+    <!-- I spent way too much time on this section but it's so worth it -->
     <section id="profile" class="hero-section">
       <div class="hero-container">
         <!-- Profile Image with Glow Effect -->
+        <!-- This glow effect took me 3 hours to get right, but look how cool it is! -->
         <div class="section__pic-container" data-aos="fade-right" data-aos-delay="200">
           <div class="profile-image-wrapper">
+            <!-- The glow effect that makes me look like I'm from the future -->
             <div class="profile-glow"></div>
             <img src="./assets/profile-pic.png" alt="Sivan Pushpagiri profile picture" class="profile-image" />
             <div class="profile-overlay">
               <div class="status-indicator">
+                <!-- This little dot pulses like a heartbeat - so satisfying! -->
                 <span class="status-dot"></span>
                 <span class="status-text">Available for work</span>
               </div>
             </div>
           </div>
-      </div>
+        </div>
 
         <!-- Hero Text Content -->
+        <!-- This is where the magic happens - the typing animation is my favorite part! -->
         <div class="section__text" data-aos="fade-left" data-aos-delay="400">
           <div class="greeting">
+            <!-- The wave emoji that bounces - I love this little detail -->
             <span class="wave">👋</span>
-        <p class="section__text__p1">Hello, I'm</p>
+            <p class="section__text__p1">Hello, I'm</p>
           </div>
           
+          <!-- My name with gradient text - looks so professional! -->
           <h1 class="title">
             <span class="name-primary">Sivan</span>
             <span class="name-accent">Pushpagiri</span>
           </h1>
           
+          <!-- The typing animation - this took me forever to get right -->
+          <!-- But now it cycles through different roles and looks amazing! -->
           <div class="typing-container">
             <p class="section__text__p2">
               I'm a 
