🎬 PERSONAL & REALISTIC: Fixed glitch effects and added hobbies section
🔧 FIXES:
- Reduced aggressive glitch effects (now only 5% chance every 15 seconds)
- Fixed weird visual issues and text duplication
- Made animations much more subtle and polished

📝 REALISTIC ABOUT SECTION:
- Updated to reflect beginner developer with passion
- Removed unrealistic '50,000 lines of code' claims
- Added authentic voice: 'hellbent on becoming really good'
- Shows genuine enthusiasm for learning and growing

🎬 NEW HOBBIES SECTION:
- Movie Addict: Horror movies like Smile 2, thrillers, sci-fi
- Chess Enthusiast: Strategic thinking and problem-solving
- Cooking Enthusiast: Experimenting with recipes and debugging food
- Beautiful cards with hover effects and personality tags
- Added to navigation menu

✨ IMPROVEMENTS:
- Smoother website navigation
- More personal and relatable content
- Better balance between effects and usability
- Shows real personality and interests

--- a/index.html
+++ b/index.html
@@ -95,6 +95,7 @@
         <div class="nav-links-container">
         <ul class="nav-links">
             <li><a href="#about" class="nav-link" data-text="About">About</a></li>
+            <li><a href="#hobbies" class="nav-link" data-text="Hobbies">Hobbies</a></li>
             <li><a href="#experience" class="nav-link" data-text="Experience">Experience</a></li>
             <li><a href="#projects" class="nav-link" data-text="Projects">Projects</a></li>
             <li><a href="#contact" class="nav-link" data-text="Contact">Contact</a></li>
@@ -121,6 +122,7 @@
         </div>
         <div class="menu-links">
             <li><a href="#about" onclick="toggleMenu()" class="mobile-nav-link">About</a></li>
+            <li><a href="#hobbies" onclick="toggleMenu()" class="mobile-nav-link">Hobbies</a></li>
             <li><a href="#experience" onclick="toggleMenu()" class="mobile-nav-link">Experience</a></li>
             <li><a href="#projects" onclick="toggleMenu()" class="mobile-nav-link">Projects</a></li>
             <li><a href="#contact" onclick="toggleMenu()" class="mobile-nav-link">Contact</a></li>
@@ -147,7 +149,7 @@
               </div>
             </div>
           </div>
-        </div>
+      </div>
 
         <!-- Hero Text Content -->
         <!-- This is where the magic happens - the typing animation is my favorite part! -->
@@ -155,7 +157,7 @@
           <div class="greeting">
             <!-- The wave emoji that bounces - I love this little detail -->
             <span class="wave">👋</span>
-            <p class="section__text__p1">Hello, I'm</p>
+        <p class="section__text__p1">Hello, I'm</p>
           </div>
           
           <!-- My name with gradient text - looks so professional! -->
@@ -308,14 +310,14 @@
             <div class="text-wrapper">
               <h3>My Journey in Tech</h3>
               <p>
-                I am a passionate developer with an insatiable curiosity for machines and their intricate workings. 
-                Each day, I wake up with a renewed appreciation for the boundless capabilities of computing and 
-                their transformative power to reshape our world.
+                I'm a passionate beginner developer who's absolutely obsessed with learning and growing in the tech world! 
+                I may not have written 50,000 lines of code yet, but I'm hellbent on becoming really good at this. 
+                Every day I'm coding, experimenting, and getting better - and I'm having a blast doing it!
               </p>
               <p>
-                In this exciting age of artificial intelligence, I'm dedicated to pursuing a career in Machine Learning 
-                and bringing intelligent automation to the masses. My goal is to bridge the gap between complex 
-                algorithms and practical solutions that make a real difference in people's lives.
+                I'm fascinated by AI and machine learning, and I'm constantly diving into new projects to learn more. 
+                My goal is to keep growing, keep building cool stuff, and eventually become the kind of developer 
+                who can create amazing things that make a real difference. The journey is just as exciting as the destination!
               </p>
               
               <!-- Tech Stack -->
@@ -343,6 +345,80 @@
         <span class="scroll-text">My Experience</span>
       </div>
     </section>
+    <!-- Hobbies Section - The fun stuff! -->
+    <section id="hobbies" class="hobbies-section">
+      <div class="section-header" data-aos="fade-up">
+        <p class="section__text__p1">What I Love Doing</p>
+        <h1 class="title">Hobbies & Interests</h1>
+        <div class="title-underline"></div>
+      </div>
+
+      <div class="hobbies-container">
+        <!-- Movie Addict Card -->
+        <div class="hobby-card" data-aos="fade-up" data-aos-delay="200">
+          <div class="hobby-icon">
+            <i class="fas fa-film"></i>
+          </div>
+          <div class="hobby-content">
+            <h3>Movie Addict 🎬</h3>
+            <p>
+              I'm a huge movie addict! Recently got into horror movies like Smile 2 - 
+              I love the thrill and the storytelling. From blockbusters to indie films, 
+              I'm always looking for the next great movie to watch.
+            </p>
+            <div class="hobby-tags">
+              <span class="hobby-tag">Horror</span>
+              <span class="hobby-tag">Thriller</span>
+              <span class="hobby-tag">Sci-Fi</span>
+              <span class="hobby-tag">Drama</span>
+            </div>
+          </div>
+        </div>
+
+        <!-- Chess Player Card -->
+        <div class="hobby-card" data-aos="fade-up" data-aos-delay="400">
+          <div class="hobby-icon">
+            <i class="fas fa-chess"></i>
+          </div>
+          <div class="hobby-content">
+            <h3>Chess Enthusiast ♟️</h3>
+            <p>
+              I love playing chess! It's like coding for the mind - every move matters, 
+              you have to think strategically, and there's always something new to learn. 
+              It's the perfect game for someone who loves problem-solving.
+            </p>
+            <div class="hobby-tags">
+              <span class="hobby-tag">Strategy</span>
+              <span class="hobby-tag">Problem Solving</span>
+              <span class="hobby-tag">Online</span>
+              <span class="hobby-tag">Tournaments</span>
+            </div>
+          </div>
+        </div>
+
+        <!-- Cooking Passion Card -->
+        <div class="hobby-card" data-aos="fade-up" data-aos-delay="600">
+          <div class="hobby-icon">
+            <i class="fas fa-utensils"></i>
+          </div>
+          <div class="hobby-content">
+            <h3>Cooking Enthusiast 👨‍🍳</h3>
+            <p>
+              I love cooking! It's like debugging code - you follow a recipe (algorithm), 
+              troubleshoot when things go wrong, and the end result is always satisfying. 
+              Plus, you get to eat your mistakes!
+            </p>
+            <div class="hobby-tags">
+              <span class="hobby-tag">Experimenting</span>
+              <span class="hobby-tag">New Recipes</span>
+              <span class="hobby-tag">International</span>
+              <span class="hobby-tag">Baking</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Experience Section -->
     <section id="experience" class="experience-section">
       <div class="section-header" data-aos="fade-up">
