--- a/index.html
+++ b/index.html
@@ -423,156 +423,162 @@
     <!-- Experience Section - Now with TREE DATA STRUCTURE! -->
     <section id="experience" class="experience-section">
       <div class="section-header" data-aos="fade-up">
-      <p class="section__text__p1">Explore My</p>
-        <h1 class="title">Experience Tree</h1>
+        <p class="section__text__p1">Explore My</p>
+        <h1 class="title">Experience & Skills</h1>
         <div class="title-underline"></div>
-        <p class="section__text__p2">Click on nodes to explore my journey through the tech forest! 🌳</p>
       </div>
 
-      <!-- MIND-BLOWING TREE DATA STRUCTURE VISUALIZATION! -->
-      <div class="tree-container" data-aos="fade-up" data-aos-delay="400">
-        <div class="tree-canvas">
-          <!-- Root Node - The Beginning -->
-          <div class="tree-node root-node" data-level="0" data-skill="beginner">
-            <div class="node-content">
-              <div class="node-icon">🌱</div>
-              <div class="node-title">Coding Journey</div>
-              <div class="node-subtitle">Started Here</div>
+      <!-- Clean & Organized Experience Section -->
+      <div class="experience-container">
+        <!-- Frontend Skills -->
+        <div class="skill-category" data-aos="fade-right" data-aos-delay="200">
+          <div class="category-header">
+            <div class="category-icon">
+              <i class="fas fa-laptop-code"></i>
             </div>
-            <div class="node-connections"></div>
+            <h2 class="experience-sub-title">Frontend Development</h2>
+            <p class="category-description">Creating beautiful and responsive user interfaces</p>
           </div>
-
-          <!-- Level 1 - Foundation -->
-          <div class="tree-node foundation-node" data-level="1" data-skill="html">
-            <div class="node-content">
-              <div class="node-icon">📄</div>
-              <div class="node-title">HTML5</div>
-              <div class="node-subtitle">Structure</div>
-              <div class="node-progress">95%</div>
+          
+          <div class="skills-grid">
+            <div class="skill-card" data-aos="zoom-in" data-aos-delay="300">
+              <div class="skill-icon">
+                <i class="fab fa-html5"></i>
+              </div>
+              <div class="skill-content">
+                <h3>HTML5</h3>
+                <div class="skill-level">
+                  <div class="skill-bar">
+                    <div class="skill-progress" data-width="95"></div>
+                  </div>
+                  <span class="skill-percentage">95%</span>
+                </div>
+                <p>Semantic markup & accessibility</p>
+              </div>
             </div>
-            <div class="node-connections"></div>
-          </div>
 
-          <div class="tree-node foundation-node" data-level="1" data-skill="css">
-            <div class="node-content">
-              <div class="node-icon">🎨</div>
-              <div class="node-title">CSS3</div>
-              <div class="node-subtitle">Styling</div>
-              <div class="node-progress">90%</div>
+            <div class="skill-card" data-aos="zoom-in" data-aos-delay="400">
+              <div class="skill-icon">
+                <i class="fab fa-css3-alt"></i>
+              </div>
+              <div class="skill-content">
+                <h3>CSS3</h3>
+                <div class="skill-level">
+                  <div class="skill-bar">
+                    <div class="skill-progress" data-width="90"></div>
+                  </div>
+                  <span class="skill-percentage">90%</span>
+                </div>
+                <p>Advanced styling & animations</p>
+              </div>
             </div>
-            <div class="node-connections"></div>
-          </div>
 
-          <div class="tree-node foundation-node" data-level="1" data-skill="js">
-            <div class="node-content">
-              <div class="node-icon">⚡</div>
-              <div class="node-title">JavaScript</div>
-              <div class="node-subtitle">Logic</div>
-              <div class="node-progress">85%</div>
+            <div class="skill-card" data-aos="zoom-in" data-aos-delay="500">
+              <div class="skill-icon">
+                <i class="fab fa-js-square"></i>
+              </div>
+              <div class="skill-content">
+                <h3>JavaScript</h3>
+                <div class="skill-level">
+                  <div class="skill-bar">
+                    <div class="skill-progress" data-width="85"></div>
+                  </div>
+                  <span class="skill-percentage">85%</span>
+                </div>
+                <p>ES6+ & modern frameworks</p>
+              </div>
             </div>
-            <div class="node-connections"></div>
-          </div>
 
-          <!-- Level 2 - Frameworks -->
-          <div class="tree-node framework-node" data-level="2" data-skill="react">
-            <div class="node-content">
-              <div class="node-icon">⚛️</div>
-              <div class="node-title">React</div>
-              <div class="node-subtitle">Frontend</div>
-              <div class="node-progress">80%</div>
+            <div class="skill-card" data-aos="zoom-in" data-aos-delay="600">
+              <div class="skill-icon">
+                <i class="fab fa-react"></i>
+              </div>
+              <div class="skill-content">
+                <h3>React</h3>
+                <div class="skill-level">
+                  <div class="skill-bar">
+                    <div class="skill-progress" data-width="80"></div>
+                  </div>
+                  <span class="skill-percentage">80%</span>
+                </div>
+                <p>Component-based architecture</p>
+              </div>
             </div>
-            <div class="node-connections"></div>
-          </div>
-
-          <div class="tree-node framework-node" data-level="2" data-skill="python">
-            <div class="node-content">
-              <div class="node-icon">🐍</div>
-              <div class="node-title">Python</div>
-              <div class="node-subtitle">Backend</div>
-              <div class="node-progress">90%</div>
-            </div>
-            <div class="node-connections"></div>
-          </div>
-
-          <div class="tree-node framework-node" data-level="2" data-skill="node">
-            <div class="node-content">
-              <div class="node-icon">🟢</div>
-              <div class="node-title">Node.js</div>
-              <div class="node-subtitle">Runtime</div>
-              <div class="node-progress">75%</div>
-            </div>
-            <div class="node-connections"></div>
-          </div>
-
-          <!-- Level 3 - Specializations -->
-          <div class="tree-node specialization-node" data-level="3" data-skill="ai">
-            <div class="node-content">
-              <div class="node-icon">🧠</div>
-              <div class="node-title">AI/ML</div>
-              <div class="node-subtitle">Future</div>
-              <div class="node-progress">70%</div>
-            </div>
-            <div class="node-connections"></div>
-          </div>
-
-          <div class="tree-node specialization-node" data-level="3" data-skill="data">
-            <div class="node-content">
-              <div class="node-icon">📊</div>
-              <div class="node-title">Data Science</div>
-              <div class="node-subtitle">Analysis</div>
-              <div class="node-progress">65%</div>
-            </div>
-            <div class="node-connections"></div>
-          </div>
-
-          <div class="tree-node specialization-node" data-level="3" data-skill="cloud">
-            <div class="node-content">
-              <div class="node-icon">☁️</div>
-              <div class="node-title">Cloud</div>
-              <div class="node-subtitle">Deployment</div>
-              <div class="node-progress">60%</div>
-            </div>
-            <div class="node-connections"></div>
-          </div>
-
-          <!-- Level 4 - Mastery Goals -->
-          <div class="tree-node mastery-node" data-level="4" data-skill="expert">
-            <div class="node-content">
-              <div class="node-icon">🚀</div>
-              <div class="node-title">Expert</div>
-              <div class="node-subtitle">Goal</div>
-              <div class="node-progress">25%</div>
-            </div>
-            <div class="node-connections"></div>
-          </div>
-
-          <!-- Floating particles around the tree -->
-          <div class="tree-particles">
-            <div class="particle particle-1"></div>
-            <div class="particle particle-2"></div>
-            <div class="particle particle-3"></div>
-            <div class="particle particle-4"></div>
-            <div class="particle particle-5"></div>
           </div>
         </div>
 
-        <!-- Tree Info Panel -->
-        <div class="tree-info-panel">
-          <div class="info-content">
-            <h3 id="selected-skill-title">Select a Node</h3>
-            <p id="selected-skill-description">Click on any node to learn more about that skill and my journey with it!</p>
-            <div class="skill-details" id="skill-details">
-              <div class="detail-item">
-                <span class="detail-label">Experience:</span>
-                <span class="detail-value" id="experience-level">-</span>
+        <!-- Backend Skills -->
+        <div class="skill-category" data-aos="fade-left" data-aos-delay="200">
+          <div class="category-header">
+            <div class="category-icon">
+              <i class="fas fa-server"></i>
+            </div>
+            <h2 class="experience-sub-title">Backend & AI/ML</h2>
+            <p class="category-description">Building intelligent systems and robust backends</p>
+          </div>
+          
+          <div class="skills-grid">
+            <div class="skill-card" data-aos="zoom-in" data-aos-delay="300">
+              <div class="skill-icon">
+                <i class="fab fa-python"></i>
               </div>
-              <div class="detail-item">
-                <span class="detail-label">Projects:</span>
-                <span class="detail-value" id="project-count">-</span>
+              <div class="skill-content">
+                <h3>Python</h3>
+                <div class="skill-level">
+                  <div class="skill-bar">
+                    <div class="skill-progress" data-width="95"></div>
+                  </div>
+                  <span class="skill-percentage">95%</span>
+                </div>
+                <p>Advanced programming & data science</p>
               </div>
-              <div class="detail-item">
-                <span class="detail-label">Learning:</span>
-                <span class="detail-value" id="learning-status">-</span>
+            </div>
+
+            <div class="skill-card" data-aos="zoom-in" data-aos-delay="400">
+              <div class="skill-icon">
+                <i class="fas fa-brain"></i>
+              </div>
+              <div class="skill-content">
+                <h3>Machine Learning</h3>
+                <div class="skill-level">
+                  <div class="skill-bar">
+                    <div class="skill-progress" data-width="85"></div>
+                  </div>
+                  <span class="skill-percentage">85%</span>
+                </div>
+                <p>Neural networks & deep learning</p>
+              </div>
+            </div>
+
+            <div class="skill-card" data-aos="zoom-in" data-aos-delay="500">
+              <div class="skill-icon">
+                <i class="fas fa-project-diagram"></i>
+              </div>
+              <div class="skill-content">
+                <h3>Neural Networks</h3>
+                <div class="skill-level">
+                  <div class="skill-bar">
+                    <div class="skill-progress" data-width="80"></div>
+                  </div>
+                  <span class="skill-percentage">80%</span>
+                </div>
+                <p>Deep learning architectures</p>
+              </div>
+            </div>
+
+            <div class="skill-card" data-aos="zoom-in" data-aos-delay="600">
+              <div class="skill-icon">
+                <i class="fas fa-flask"></i>
+              </div>
+              <div class="skill-content">
+                <h3>Flask</h3>
+                <div class="skill-level">
+                  <div class="skill-bar">
+                    <div class="skill-progress" data-width="75"></div>
+                  </div>
+                  <span class="skill-percentage">75%</span>
+                </div>
+                <p>Lightweight web framework</p>
               </div>
             </div>
           </div>
