🚀 RADICAL MODERNIZATION: Clean, Punchy & Charismatic!
✨ MAJOR IMPROVEMENTS:
- Removed duplicate profile picture, kept only the main one
- Made profile pictures POP with modern hover effects
- Rewrote all text to be concise, punchy, humorous & charismatic
- Fixed repetitive 'enthusiast' words in hobbies section

🎯 CONTENT UPDATES:
- 'Code Wizard & Problem-Solving Ninja' instead of boring titles
- 'Chess Strategist' and 'Culinary Artist' for variety
- 'Coffee-to-Code Converter' in typing animation
- More engaging and personality-driven copy throughout

🎨 DESIGN ENHANCEMENTS:
- Modern typography with better spacing and hierarchy
- Enhanced profile picture hover effects with floating animation
- Improved button styles with modern interactions
- Better visual hierarchy and readability

🔥 RESULT:
- Much more modern and clean design
- Charismatic personality shines through
- Professional yet fun and engaging
- Single, prominent profile picture that pops

The site now has serious personality and modern appeal! 🔥

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
           <div class="greeting">
             <!-- The wave emoji that bounces - I love this little detail -->
             <span class="wave">👋</span>
-        <p class="section__text__p1">Hello, I'm</p>
+        <p class="section__text__p1">Hey there! I'm</p>
           </div>
           
           <!-- My name with gradient text - looks so professional! -->
@@ -255,14 +255,14 @@
       </div>
 
       <div class="about-container">
-        <!-- Profile Image -->
+        <!-- Profile Image - Single, Modern Look -->
         <div class="about-image-container" data-aos="fade-right" data-aos-delay="200">
           <div class="image-wrapper">
-            <img src="./assets/about-pic.png" alt="Sivan Pushpagiri profile picture" class="about-pic" />
+            <img src="./assets/profile-pic.png" alt="Sivan Pushpagiri - The Code Wizard" class="about-pic" />
             <div class="image-overlay">
               <div class="overlay-content">
-                <i class="fas fa-code"></i>
-                <span>Always Learning</span>
+                <i class="fas fa-magic"></i>
+                <span>Code Wizard</span>
               </div>
             </div>
           </div>
@@ -306,19 +306,19 @@
             </div>
           </div>
 
-          <!-- About Text -->
+          <!-- About Text - Punchy & Charismatic -->
           <div class="about-text-container" data-aos="fade-up" data-aos-delay="900">
             <div class="text-wrapper">
-              <h3>My Journey in Tech</h3>
+              <h3>Code Wizard & Problem-Solving Ninja! ⚡</h3>
               <p>
-                I'm a passionate beginner developer who's absolutely obsessed with learning and growing in the tech world! 
-                I may not have written 50,000 lines of code yet, but I'm hellbent on becoming really good at this. 
-                Every day I'm coding, experimenting, and getting better - and I'm having a blast doing it!
+                What's up! I'm Sivan - a coding addict who turns caffeine into clean code 
+                and impossible ideas into reality. Started as a curious newbie, now I'm 
+                building everything from web apps to AI that actually works!
               </p>
               <p>
-                I'm fascinated by AI and machine learning, and I'm constantly diving into new projects to learn more. 
-                My goal is to keep growing, keep building cool stuff, and eventually become the kind of developer 
-                who can create amazing things that make a real difference. The journey is just as exciting as the destination!
+                I live for those "EUREKA!" moments when code finally clicks. Debugging is 
+                my meditation, and clean code is my religion. Every bug is just a feature 
+                in disguise, right? 😄 Ready to build the future, one line of code at a time!
               </p>
               
               <!-- Tech Stack -->
@@ -382,7 +382,7 @@
             <i class="fas fa-chess"></i>
           </div>
           <div class="hobby-content">
-            <h3>Chess Enthusiast ♟️</h3>
+            <h3>Chess Strategist ♟️</h3>
             <p>
               I love playing chess! It's like coding for the mind - every move matters, 
               you have to think strategically, and there's always something new to learn. 
@@ -403,7 +403,7 @@
             <i class="fas fa-utensils"></i>
           </div>
           <div class="hobby-content">
-            <h3>Cooking Enthusiast 👨‍🍳</h3>
+            <h3>Culinary Artist 👨‍🍳</h3>
             <p>
               I love cooking! It's like debugging code - you follow a recipe (algorithm), 
               troubleshoot when things go wrong, and the end result is always satisfying. 
