🔥 HACKER TRANSFORMATION: Matrix-Style Portfolio!
✨ COMPLETELY TRANSFORMED:
- Black background with green hacker text
- Matrix rain background effects
- Glitch animations everywhere
- Terminal-style UI elements
- Neon glow effects

🎨 HACKER THEME FEATURES:
- Green (#00ff00) color scheme throughout
- JetBrains Mono font for terminal feel
- Matrix rain background animations
- Glitch effects on hover
- Terminal cursor blinking animations
- Neon glow text shadows

⚡ SICK ANIMATIONS:
- matrixMove: Moving grid background
- glitchPulse: Pulsing background effects
- glitch: Glitch effect on hover
- terminalBlink: Blinking cursor animation
- neonGlow: Pulsing neon text glow
- dataStream: Flowing data effects

🎯 TERMINAL UI ELEMENTS:
- 'root@hacker:~$' terminal prompts
- '> ' command indicators
- '// ' comment prefixes
- Terminal-style buttons
- Matrix-style borders and shadows

🔥 RESULT:
- Looks like a real hacker terminal
- Green text on black background
- Matrix rain effects
- Glitch animations
- Terminal-style interactions

This is now a SICK hacker-themed portfolio! 🔥

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     
     <!-- Styles -->
     <link rel="stylesheet" href="style.css">
@@ -47,13 +47,13 @@
         <div class="hero-container">
             <div class="hero-content">
                 <h1 class="hero-title">
-                    <span class="title-line">Creative</span>
-                    <span class="title-line">Developer</span>
+                    <span class="title-line">HACKER</span>
+                    <span class="title-line">DEVELOPER</span>
                 </h1>
-                <p class="hero-subtitle">Building digital experiences that matter</p>
+                <p class="hero-subtitle">Crafting digital experiences that break the matrix</p>
                 <div class="hero-cta">
-                    <a href="#work" class="btn btn-primary">View My Work</a>
-                    <a href="#contact" class="btn btn-secondary">Get In Touch</a>
+                    <a href="#work" class="btn btn-primary">EXECUTE PROJECTS</a>
+                    <a href="#contact" class="btn btn-secondary">INITIATE CONTACT</a>
                 </div>
             </div>
             <div class="hero-visual">
@@ -73,9 +73,9 @@
             </div>
             <div class="about-content">
                 <div class="about-text">
-                    <h3>Hey there! I'm Sivan 👋</h3>
-                    <p>I'm a creative developer who loves turning ideas into reality through code. I believe in the power of clean, efficient code and beautiful user experiences.</p>
-                    <p>When I'm not coding, you'll find me exploring new technologies, playing chess, or experimenting in the kitchen. I'm always learning and growing!</p>
+                    <h3>root@hacker:~$ whoami</h3>
+                    <p>I'm a digital hacker who breaks through barriers with code. I specialize in crafting experiences that push the boundaries of what's possible in the digital realm.</p>
+                    <p>When I'm not infiltrating systems, you'll find me analyzing algorithms, playing strategic games, or experimenting with new technologies. Always learning, always evolving!</p>
                     <div class="skills">
                         <span class="skill-tag">JavaScript</span>
                         <span class="skill-tag">React</span>
