✨ REALISTIC CONTENT & SMOOTH ANIMATIONS!
🎯 CONTENT UPDATES:
- Changed from 'HACKER' to 'FULL STACK DEVELOPER'
- Updated about text to target full-stack, frontend, backend, ML opportunities
- Realistic project count: 15+ instead of 50+
- More realistic project descriptions (Task Management, Weather Dashboard)
- Professional but still cool terminal-style presentation

🎨 NEW SMOOTH ANIMATIONS:
- fallingText: Developer keywords falling from top to bottom
- smoothFloat: Gentle floating effect on hover
- dataFlow: Flowing data animation
- pulseGlow: Pulsing glow effects
- smoothSlide: Smooth slide-in animations

⚡ IMPROVED SMOOTHNESS:
- All animations use cubic-bezier easing for smoother motion
- Added scale transforms on hover for better feedback
- Longer, more graceful animation durations
- Better transition timing for professional feel

🔥 FALLING TEXT EFFECT:
- Developer keywords (CODE, DEVELOPER, FULLSTACK, etc.) falling
- Two streams with different timing for continuous effect
- Subtle opacity for background effect
- Smooth rotation and movement

🎯 RESULT:
- More professional and realistic content
- Smoother, more polished animations
- Better targeting for actual job opportunities
- Still maintains the cool terminal aesthetic

Perfect balance of professional and cool! 🚀

--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
     <link rel="icon" type="image/svg+xml" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='.9em' font-size='90'>🚀</text></svg>">
 </head>
 <body>
+    <!-- Falling Text Animation -->
+    <div class="falling-text"></div>
+
     <!-- Navigation -->
     <nav class="nav">
         <div class="nav-container">
@@ -47,10 +50,10 @@
         <div class="hero-container">
             <div class="hero-content">
                 <h1 class="hero-title">
-                    <span class="title-line">HACKER</span>
+                    <span class="title-line">FULL STACK</span>
                     <span class="title-line">DEVELOPER</span>
                 </h1>
-                <p class="hero-subtitle">Crafting digital experiences that break the matrix</p>
+                <p class="hero-subtitle">Building modern web applications with passion</p>
                 <div class="hero-cta">
                     <a href="#work" class="btn btn-primary">EXECUTE PROJECTS</a>
                     <a href="#contact" class="btn btn-secondary">INITIATE CONTACT</a>
@@ -73,9 +76,9 @@
             </div>
             <div class="about-content">
                 <div class="about-text">
-                    <h3>root@hacker:~$ whoami</h3>
-                    <p>I'm a digital hacker who breaks through barriers with code. I specialize in crafting experiences that push the boundaries of what's possible in the digital realm.</p>
-                    <p>When I'm not infiltrating systems, you'll find me analyzing algorithms, playing strategic games, or experimenting with new technologies. Always learning, always evolving!</p>
+                    <h3>root@developer:~$ whoami</h3>
+                    <p>I'm a passionate full-stack developer specializing in modern web technologies. I love building scalable applications and exploring the latest in frontend, backend, and machine learning.</p>
+                    <p>When I'm not coding, you'll find me learning new frameworks, playing chess, or experimenting in the kitchen. Always curious, always growing!</p>
                     <div class="skills">
                         <span class="skill-tag">JavaScript</span>
                         <span class="skill-tag">React</span>
@@ -87,7 +90,7 @@
                 </div>
                 <div class="about-stats">
                     <div class="stat">
-                        <div class="stat-number">50+</div>
+                        <div class="stat-number">15+</div>
                         <div class="stat-label">Projects</div>
                     </div>
                     <div class="stat">
@@ -116,8 +119,8 @@
                         <img src="assets/project-1.png" alt="Project 1" loading="lazy">
                     </div>
                     <div class="work-content">
-                        <h3>E-Commerce Platform</h3>
-                        <p>Full-stack e-commerce solution with React and Node.js</p>
+                        <h3>Task Management App</h3>
+                        <p>Full-stack web application for managing daily tasks with user authentication</p>
                         <div class="work-tech">
                             <span>React</span>
                             <span>Node.js</span>
@@ -130,12 +133,12 @@
                         <img src="assets/project-2.png" alt="Project 2" loading="lazy">
                     </div>
                     <div class="work-content">
-                        <h3>AI Chatbot</h3>
-                        <p>Intelligent chatbot using machine learning algorithms</p>
+                        <h3>Weather Dashboard</h3>
+                        <p>Interactive weather app with real-time data and location services</p>
                         <div class="work-tech">
-                            <span>Python</span>
-                            <span>TensorFlow</span>
-                            <span>Flask</span>
+                            <span>JavaScript</span>
+                            <span>API</span>
+                            <span>CSS</span>
                         </div>
                     </div>
                 </div>
@@ -145,7 +148,7 @@
                     </div>
                     <div class="work-content">
                         <h3>Portfolio Website</h3>
-                        <p>Modern, responsive portfolio with smooth animations</p>
+                        <p>Responsive portfolio with modern animations and smooth interactions</p>
                         <div class="work-tech">
                             <span>HTML</span>
                             <span>CSS</span>
