🎯 REAL PROJECTS & ULTRA OPTIMIZATION!
✨ REAL PROJECTS ADDED:
- MentalHealthAssistant: Full-stack React/Node.js/MongoDB app
- Alien Invasion: Python/Pygame space shooter game
- Portfolio Website: This matrix-style portfolio
- Updated project count from 15+ to 3+ (realistic)
- Added GitHub links to each project

🔗 SOCIAL LINKS:
- Added real GitHub: https://github.com/SivanRP
- Added real LinkedIn: https://www.linkedin.com/in/sivanreddypushpagiri/
- All links open in new tabs

⚡ ULTRA PERFORMANCE OPTIMIZATION:
- Matrix rain: 10fps instead of 20fps
- Limited DOM elements to 50 max
- Reduced character frequency (30% vs 100%)
- Slower movement for smoother effect
- Better memory management
- Reduced opacity for less visual noise

🎨 ENHANCED UI:
- Added work-links styling with hover effects
- Better project descriptions with real tech stacks
- Improved contact section with actual social links
- Maintained hacker aesthetic throughout

🚀 READY FOR DEPLOYMENT:
- All optimizations complete
- Real projects showcased
- Social links working
- Performance maximized

Your portfolio now shows your ACTUAL work! 🔥

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
                 </div>
                 <div class="about-stats">
                     <div class="stat">
-                        <div class="stat-number">15+</div>
+                        <div class="stat-number">3+</div>
                         <div class="stat-label">Projects</div>
                     </div>
                     <div class="stat">
@@ -116,43 +116,53 @@
             <div class="work-grid">
                 <div class="work-item">
                     <div class="work-image">
-                        <img src="assets/project-1.png" alt="Project 1" loading="lazy">
+                        <img src="assets/project-1.png" alt="MentalHealthAssistant" loading="lazy">
                     </div>
                     <div class="work-content">
-                        <h3>Task Management App</h3>
-                        <p>Full-stack web application for managing daily tasks with user authentication</p>
+                        <h3>MentalHealthAssistant</h3>
+                        <p>Full-stack mental well-being application with React.js frontend, Node.js/Express backend, MongoDB storage, and JWT authentication</p>
                         <div class="work-tech">
                             <span>React</span>
                             <span>Node.js</span>
                             <span>MongoDB</span>
+                            <span>JWT</span>
+                        </div>
+                        <div class="work-links">
+                            <a href="https://github.com/SivanRP/MentalHealthAssistant" target="_blank" class="work-link">GitHub</a>
                         </div>
                     </div>
                 </div>
                 <div class="work-item">
                     <div class="work-image">
-                        <img src="assets/project-2.png" alt="Project 2" loading="lazy">
+                        <img src="assets/project-2.png" alt="Alien Invasion" loading="lazy">
                     </div>
                     <div class="work-content">
-                        <h3>Weather Dashboard</h3>
-                        <p>Interactive weather app with real-time data and location services</p>
+                        <h3>Alien Invasion</h3>
+                        <p>Classic space shooter game built with Python and Pygame featuring smooth gameplay and retro graphics</p>
                         <div class="work-tech">
-                            <span>JavaScript</span>
-                            <span>API</span>
-                            <span>CSS</span>
+                            <span>Python</span>
+                            <span>Pygame</span>
+                            <span>Game Dev</span>
+                        </div>
+                        <div class="work-links">
+                            <a href="https://github.com/SivanRP/alien-invasion" target="_blank" class="work-link">GitHub</a>
                         </div>
                     </div>
                 </div>
                 <div class="work-item">
                     <div class="work-image">
-                        <img src="assets/project-3.png" alt="Project 3" loading="lazy">
+                        <img src="assets/project-3.png" alt="Portfolio Website" loading="lazy">
                     </div>
                     <div class="work-content">
                         <h3>Portfolio Website</h3>
-                        <p>Responsive portfolio with modern animations and smooth interactions</p>
+                        <p>Modern portfolio with matrix rain, glitch effects, and smooth animations built with vanilla HTML/CSS/JS</p>
                         <div class="work-tech">
                             <span>HTML</span>
                             <span>CSS</span>
                             <span>JavaScript</span>
+                        </div>
+                        <div class="work-links">
+                            <a href="https://github.com/SivanRP/sivan-portfolio" target="_blank" class="work-link">GitHub</a>
                         </div>
                     </div>
                 </div>
@@ -176,11 +186,11 @@
                             <span class="contact-icon">📧</span>
                             sivan@example.com
                         </a>
-                        <a href="https://github.com/sivan" class="contact-link">
+                        <a href="https://github.com/SivanRP" target="_blank" class="contact-link">
                             <span class="contact-icon">🐙</span>
                             GitHub
                         </a>
-                        <a href="https://linkedin.com/in/sivan" class="contact-link">
+                        <a href="https://www.linkedin.com/in/sivanreddypushpagiri/" target="_blank" class="contact-link">
                             <span class="contact-icon">💼</span>
                             LinkedIn
                         </a>
