--- a/index.html
+++ b/index.html
@@ -182,9 +182,13 @@
                     <h3>Get in touch</h3>
                     <p>I'm always excited to hear about new opportunities and interesting projects!</p>
                     <div class="contact-links">
-                        <a href="mailto:sivan@example.com" class="contact-link">
+                        <a href="mailto:sivanpushpagiri@gmail.com" class="contact-link">
                             <span class="contact-icon">📧</span>
-                            sivan@example.com
+                            sivanpushpagiri@gmail.com
+                        </a>
+                        <a href="https://sivansden.vercel.app" target="_blank" class="contact-link">
+                            <span class="contact-icon">🌐</span>
+                            sivansden.vercel.app
                         </a>
                         <a href="https://github.com/SivanRP" target="_blank" class="contact-link">
                             <span class="contact-icon">🐙</span>
